Kubernetes Files/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microsvc
spec:
  selector:
    matchLabels:
      run: microsvc
  replicas: 1
  template:
    metadata:
      labels:
        run: microsvc
    spec:
      containers:
      - name: microsvc
        image: "prateeksingh1590/microsvc:1.1"
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: microsvc
  labels:
    run: microsvc
spec:
  ports:
  - port: 8080
  selector:
    run: microsvc
